# proof_reader

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.streamlit/: config.toml
app/: app.py  claim_searcher.py  home_page.py  overview_page.py  page_2.py
models/: gemini_model.py  llama.py
